--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recipebank • Smart Recipe Finder</title>
+  <title>PantryPal • Smart Recipe Finder</title>
   <meta name="description" content="Find recipes based on ingredients you already have. No AI needed — just type & cook!">
   <style>
     * { box-sizing: border-box; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
@@ -123,7 +123,7 @@
   </div>
   
   <div class="app-footer">
-    <p>✨ Made with ❤️ by Recipebank • <a href="#" onclick="showPrivacy()">Privacy Policy</a></p>
+    <p>✨ Made with ❤️ by Pantrypal • <a href="#" onclick="showPrivacy()">Privacy Policy</a></p>
   </div>
 
   <script>
@@ -490,7 +490,7 @@
     }
 
     function showPrivacy() {
-      alert("Recipebank Privacy Notice:\n\n• We NEVER store your ingredients\n• No accounts required\n• 100% browser-based (nothing leaves your device)\n• Open-source code available on GitHub");
+      alert("Pantrypal Privacy Notice:\n\n• We NEVER store your ingredients\n• No accounts required\n• 100% browser-based (nothing leaves your device)\n• Open-source code available on GitHub");
       return false;
     }
 
