Rename app from Recipebank to PantryPal

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
   <div class="header">
-    <h1>🍳 <span>Recipe</span>bank</h1>
+    <h1>🥙 <span>Pantry</span>Pal</h1>
     <p>Type what's in your kitchen → Get perfect recipes in seconds</p>
   </div>
   
@@ -123,7 +123,7 @@
   </div>
   
   <div class="app-footer">
-    <p>✨ Made with ❤️ by Pantrypal • <a href="#" onclick="showPrivacy()">Privacy Policy</a></p>
+    <p>✨ Made with ❤️ by PantryPal • <a href="#" onclick="showPrivacy()">Privacy Policy</a></p>
   </div>
 
   <script>
@@ -490,7 +490,7 @@
     }
 
     function showPrivacy() {
-      alert("Pantrypal Privacy Notice:\n\n• We NEVER store your ingredients\n• No accounts required\n• 100% browser-based (nothing leaves your device)\n• Open-source code available on GitHub");
+      alert("PantryPal Privacy Notice:\n\n• We NEVER store your ingredients\n• No accounts required\n• 100% browser-based (nothing leaves your device)\n• Open-source code available on GitHub");
       return false;
     }
 
